# live-chat

./: .gitignore  chat.py  docker-compose-monitoring-only.yml  docker-compose-monitoring.yml  docker-compose.yml  log_conf.yaml  log_conf_dev.yaml  log_conf_prod.yaml  main.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml
.github/workflows/: deploy.yml
api/v1/: endpoints.py
app/: __init__.py
app/adapters/: pubsub_service.py  token_adapter.py  token_service.py
app/application/: service.py
app/domain/: chat.py  model.py  models.py
app/infrastructure/: database.py  redis.py  repositories.py
app/schema/: message.py
app/service/: chat_service.py  message_relay.py
chatservice/src/: log_conf_dev.yaml  main.py  pyproject.toml
chatservice/src/api/v1/: __init__.py  endpoints.py
chatservice/src/app/: __init__.py
chatservice/src/app/adapters/: pubsub_service.py  repositories.py  token_adapter.py  websocket.py
chatservice/src/app/domain/: model.py
chatservice/src/app/domain/adapters/: websocket.py
chatservice/src/app/domain/interfaces/: pubsub.py  repository.py
chatservice/src/app/domain/use_cases/: message_relay.py  token_validator.py
chatservice/src/app/infrastructure/pubsub/: inmemory_pubsub.py  redis_pubsub.py
chatservice/src/app/interfaces/: pubsub.py  repository.py
chatservice/src/app/pubsub/: inmemory_pubsub.py  redis_pubsub.py
chatservice/src/app/service/: message_relay.py
chatservice/src/app/use_cases/: message_relay.py
chatservice/src/core/: config.py  otel_monitoring.py  prometheus.py  test_otelcol.py  utils.py  uvicorn_config.py
chatservice/src/core/middleware/: prometheus_http.py  prometheus_websocket.py  pyinstrument.py  views.py
chatservice/src/docker/: Dockerfile  Dockerfile.base
chatservice/src/templates/: chat.html
core/: otel_monitoring.py
templates/: chat.html
(+9 files in other folders)
