[tool.poetry]
name = "live-chat"
version = "0.1.0"
description = ""
authors = ["aohus <dbtnghk528@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.3"}
websockets = "^13.1"
redis = "^5.2.0"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
